--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,5 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://test-1251544106.cos.ap-guangzhou.myqcloud.com/zs/wleven.jpg']
+lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
+custom: ['https://paypal.me/wleven966','https://test-1251544106.cos.ap-guangzhou.myqcloud.com/zs/wleven.jpg']
